src/objects/Enrollment__c.object
<CustomObject>
    <description>This custom object is a singular instance of a Client&apos;s (Contact) enrollment in a Class.</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <formula>Class__r.Class_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Record_Type__c</fullName>
        <formula>Class__r.RecordTypeId</formula>
        <label>Class Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>The Class that this Client will be enrolled in</description>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client_Class_Status_Field__c</fullName>
        <label>Client Class Status Field</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Client that will be enrolled in a Class</description>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrollments</relationshipLabel>
        <relationshipName>relContactEnrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Single_Session_Class__c</fullName>
        <formula>IF(ISPICKVAL(Class__r.Default_Ending_Session__c, &apos;Single session only&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Single Session Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <description>sort enrollment related list by class status (so active first) then by first four letters of class name.</description>
        <formula>Left(text(Client_Class_Status_Field__c),2)&amp;left(Class_Name__c,4)</formula>
        <label>Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Date__c</fullName>
        <label>Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Reason__c</fullName>
        <label>Withdrawn Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Class_Name__c</columns>
        <columns>Class__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Class_Status_Field__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Career_Ex</fullName>
        <columns>Class_Name__c</columns>
        <columns>Class__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Class_Status_Field__c</columns>
        <columns>Most_Recent_Enrollment__c</columns>
        <columns>NAME</columns>
        <columns>Withdrawn_Date__c</columns>
        <columns>Withdrawn_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>Career Exploration</value>
        </filters>
        <label>Career Ex</label>
    </listViews>
    <listViews>
        <fullName>Mandatory_Classes</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>Class_Name__c</columns>
        <columns>Class__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Class_Status_Field__c</columns>
        <columns>Most_Recent_Enrollment__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>What</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>Criminal Justice</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>Orientation Class</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>STAR Assessment</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>Health Seminar</value>
        </filters>
        <label>Mandatory Classes</label>
    </listViews>
    <listViews>
        <fullName>Mandatory_Classes_check_withdrawn</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) and 6</booleanFilter>
        <columns>Class_Name__c</columns>
        <columns>Class__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Class_Status_Field__c</columns>
        <columns>Most_Recent_Enrollment__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>What</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>Criminal Justice</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>Orientation Class</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>STAR Assessment</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>Health Seminar</value>
        </filters>
        <filters>
            <field>Withdrawn_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Mandatory Classes check withdrawn</label>
    </listViews>
    <listViews>
        <fullName>SA_Ongoing</fullName>
        <columns>Class_Name__c</columns>
        <columns>Class__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Class_Status_Field__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>Substance Abuse Group /2011-10-07</value>
        </filters>
        <filters>
            <field>Client_Class_Status_Field__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>SA_Ongoing</label>
    </listViews>
    <listViews>
        <fullName>Stages_of_Change</fullName>
        <columns>Class_Name__c</columns>
        <columns>Class__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Class_Status_Field__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>startsWith</operation>
            <value>Stages of Change</value>
        </filters>
        <label>Stages of Change</label>
    </listViews>
    <listViews>
        <fullName>check_Enrollments_and_withdrawn</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Class_Name__c</columns>
        <columns>Class__c</columns>
        <columns>Client__c</columns>
        <columns>Client_Class_Status_Field__c</columns>
        <columns>Most_Recent_Enrollment__c</columns>
        <columns>Withdrawn_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Withdrawn_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Client_Class_Status_Field__c</field>
            <operation>equals</operation>
            <value>Withdrawn</value>
        </filters>
        <label>check Enrollments and withdrawn</label>
    </listViews>
    <nameField>
        <displayFormat>E-{0000000}</displayFormat>
        <label>Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>